tests/e2e/snapshots/e2e__tui_tests__context_usage_display.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◇ claude-sonnet-4 | 00:00"
"Iter 1/5 | Task 0/0 | In: 0 | Out: 0 | CacheW: 0 | CacheR: 0 | ███████75% ██    "
"────────────────────────────────────────────────────────────────────────────────"
"┌─ Claude (Iteration 1) ───                                                     "
"│ Claude: Testing context usage display.                                        "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  p:pause  Ct"
