tests/e2e/snapshots/e2e__tui_tests__eval_multi_iteration_display.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◇ claude-sonnet-4 | 00:00"
"Iter 2/5 | Task 1/1 | In: 4.5k | Out: 1.1k | CacheW: 100.0 | CacheR: 100.0 | 0% "
"────────────────────────────────────────────────────────────────────────────────"
"┌─ Claude (Iteration 2) ───                                                     "
"│ Read: main.py                                                                 "
"│ Write: main.py                                                                "
"│ Claude: Fixed the calculator to handle integer division...                    "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  t:thinking "
