tests/e2e/snapshots/e2e__tui_tests__iteration_navigation.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◇ claude-sonnet-4 | 00:00"
"Iter 2/5 | Task 1/0 | In: 0 | Out: 0 | CacheW: 0 | CacheR: 0 |        0%        "
"────────────────────────────────────────────────────────────────────────────────"
"┌─ Claude (Iteration 1) ───                                                     "
"│ Claude: Iteration 1 message - first iteration content.                        "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  p:pause  Ct"
