tests/e2e/snapshots/e2e__tui_tests__plan_tui_initial_state.snap
---
source: tests/e2e/tui_tests.rs
assertion_line: 518
expression: terminal.backend()
---
"Plan | Detecting project stack... | 0s                                          "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"┌Conversation (c to toggle, PgUp/PgDn to scroll)───────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Plan Preview (q to quit, PgUp/PgDn to scroll)───────────────────────────────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
