tests/e2e/snapshots/e2e__tui_tests__plan_tui_stderr_display.snap
---
source: tests/e2e/tui_tests.rs
assertion_line: 474
expression: terminal.backend()
---
"Plan | Generating plan... | 0s                                                  "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"┌Conversation (c to toggle, PgUp/PgDn to scroll)───────────────────────────────┐"
"│[stderr] Warning: rate limit exceeded                                         │"
"│                                                                              │"
"│[stderr] Retrying in 5 seconds...                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Plan Preview (q to quit, PgUp/PgDn to scroll)───────────────────────────────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
