tests/e2e/snapshots/e2e__tui_tests__scroll_navigation.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◇ claude-sonnet-4 | 00:00"
"Iter 1/5 | Task 0/0 | In: 0 | Out: 0 | CacheW: 0 | CacheR: 0 |        0%        "
"────────────────────────────────────────────────────────────────────────────────"
"│ Claude: Message line 15 - this is some output from Claude.                    "
"│ +12 more tool uses (Tab to expand)                                            "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  t:thinking "
