tests/e2e/snapshots/e2e__tui_tests__status_bar_displays_tokens.snap
---
source: tests/e2e/tui_tests.rs
expression: terminal.backend()
---
"rslph                                                  ◆ claude-opus-4-5 | 00:00"
"Iter 3/10 | Task 2/5 | In: 5.2k | Out: 10.9k | CacheW: 2.1k | CacheR: 1.5k | 0% "
"────────────────────────────────────────────────────────────────────────────────"
"┌─ Claude (Iteration 3) ───                                                     "
"│ Claude: Testing token display.                                                "
"└─────                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"j/k:scroll  Tab:select  Enter:toggle  {/}:iteration  c:conversation  t:thinking "
